2008-02-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlParserContextTests.cs : they are working. case #3 should not
	  try to parse broken internalSubset (we do not allow broken
	  intsubset and it is almost no worthy of assuring only-nominal
	  .net compat that such broken internalSubset should be allowed).

2008-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : added test for bug #347768.

2008-01-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* XmlParserContextTests.cs: Added ctor tests.

2007-12-06  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlUrlResolverTests.cs : fixed test; file://file.txt is to access
	  such a server whose (domain) name is "file.txt", which is actually
	  an absolute URI. Remove "regression" in the nunit test.

2007-11-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdValidatingReaderTests.cs : added test for #339934.

2007-11-09  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlConvertTests.cs : added test for #339004 and more.

2007-10-31  Gert Driesen  <drieseng@users.sourceforge.net>

	* XmlConvertTests.cs: Added link to MS bug report.

2007-10-31  Atsushi Enomoto  <atsushi@ximian.com>

	* XsdValidatingReaderTests.cs : added test for #336625.

2007-10-30  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlConvertTest.cs : added test for DateTime roundtrip.

2007-10-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : added test for bug #334752.

2007-09-28  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriterTests.cs : added WriteNodeXPathNavigatorAttribute().

2007-09-27  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriterTests.cs : added test for WriteValue(object).
	* XmlTextWriterTests.cs : added WriteQualifiedName() test with empty
	  namespace.

2007-08-13  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriterSettingsTests.cs : added test for extraneous newline on
	  OmitXmlDeclaration mode.

2007-08-02  Atsushi Enomoto  <atsushi@ximian.com>
